// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component with default props 1`] = `
<div
  role="alert"
  style={
    Object {
      "background": "red",
    }
  }
>
  Uh Oh!
</div>
`;

exports[`Component with style props 1`] = `
<div
  style={
    Object {
      "fontSize": "16px",
    }
  }
>
  Hey there!
</div>
`;

exports[`Component with style props 2`] = `
<div
  style={
    Object {
      "fontSize": "12px",
    }
  }
>
  Hey there!
</div>
`;

exports[`Component with style props 3`] = `
<div
  style={
    Object {
      "fontSize": "15px",
    }
  }
>
  Hey there!
</div>
`;

exports[`StyleSheeet 1`] = `
<style
  dangerouslySetInnerHTML={
    Object {
      "__html": "
        body {
          color: red;
        }
      ",
    }
  }
/>
`;

exports[`Styler 1`] = `
<span
  style={
    Object {
      "color": "red",
    }
  }
>
  Red!
</span>
`;
